[project]
name = "sample-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.8.8",
]


[tool.ruff.analyze]
exclude = ["cache"]

[tool.ruff]
target-version = "py38"
line-length = 88
indent-width = 4


[tool.ruff.lint]




[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"

